User.php中增加了一模型基础操作

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -5,15 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-{$result.id}--{$result.data}
+{$result.id}--{$result.name}
 <br/>
-{Url::build('blog/read','name=thinkphp')}
+
 <br/>
-{Url::build('blog/get',['id'=>5])}
+
 <br/>
 {Url}
 <br/>
-{url('blog/read','name=thinkphp')}
+
 <br/>
 
 </body>
